--- a/templates/includes/skills.html
+++ b/templates/includes/skills.html
@@ -7,8 +7,7 @@
                     <h5 class="title-left">
                         Skill
                       </h5>
-                      <br/>
-                    
+                      <p class="footnote">Click Skill to expand </p>
                     <div class="row">
                         <div class="col-sm-6">
                             {% for skill in skills %}
@@ -24,6 +23,8 @@
                                 {% endif %}
                             {% endfor %}
                         </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
