--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 {% include 'includes/about.html' %}
 {% include 'includes/skills.html' %}
 {% include 'includes/technologies.html' %}
+{% include 'includes/projects.html' %}
+{% include 'includes/contact.html' %}
 {% include 'includes/footer.html' %}
 
 {% endblock content %}
