--- a/templates/includes/about.html
+++ b/templates/includes/about.html
@@ -5,7 +5,7 @@
             <div class="col-sm-12">
                 <div class="box-shadow-full">
                     <h5 class="title-left">
-                        About me
+                        About Me
                       </h5>
                       <br/>
                     <!--Inside of the Box-->
