--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,16 +2,17 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
     
-        <h1 class="logo"><a href="index.html">Jan Peterhänsel</a></h1>
+        <h1 class="logo"><a href="index.html"><i class="fa-solid fa-laptop-code"></i> Jan Peterhänsel</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
     
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="#about">About Me</a></li>
             <li><a class="nav-link scrollto" href="#skills">Skills</a></li>
             <li><a class="nav-link scrollto" href="#technologies">Technologies</a></li>
+            <li><a class="nav-link scrollto" href="#projects">Projects</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
