--- a/templates/includes/main.html
+++ b/templates/includes/main.html
@@ -5,7 +5,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Jan Peterhänsel</h1>
-          <p class="hero-subtitle">Systemadministrator / Web-Developer / Python-Developer</span></p>
+          <p class="hero-subtitle">Python-Developer / Web-Developer</span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
