Final Commit of the day

--- a/templates/includes/contact.html
+++ b/templates/includes/contact.html
@@ -10,7 +10,7 @@
                             Message me
                         </h5>
                     </div>
-                    <form action="/sendmail" method="post" role="form" class="php-email-form">
+                    <form action="/" method="post" role="form" class="php-email-form">
                         <div class="form-group">
                             <label for="email">Email address: </label>
                             <input type="email" class="form-control" placeholder="Enter email" id="email">
@@ -23,10 +23,9 @@
                             <label for="subject">Your Message: </label>
                             <textarea class="form-control" id="message" name="message" rows="5" placeholder="Message" required></textarea>
                         </div>
-                        <div class="g-recaptcha" data-sitekey="6LdChxwUAAAAABtThBYWAEymuXfXL6cb-9DP8m0d"></div>
+                        <div class="g-recaptcha" data-sitekey="{{ recaptcha_public }}"></div>
                         <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                        <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
-                        async defer>
+                        <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
                         </script>
                     </form>
                 </div>
