--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,9 +91,6 @@ a:hover {
   }
 }
 
-.overlay-mf {
-  background-color: #0078ff;
-}
 
 .overlay-mf {
   position: absolute;
@@ -1009,11 +1006,12 @@ a:hover {
 }
 
 .contact-mf {
-  margin-top: 4rem;
+  z-index:-1;
+  margin-top:20vh;
 }
 @media (min-width: 767px) {
   .contact-mf .box-pl2 {
-    margin-top: 3rem;
+    margin-top: 5rem;
     padding-left: 0rem;
   }
 }
