--- a/templates/base.html
+++ b/templates/base.html
@@ -25,61 +25,55 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/glightbox.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/swiper-bundle.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.min.css') }}">
-        <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"  async defer></script>
-        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"  async defer></script>
-        <script src="{{ url_for('static', filename='js/popper.min.js') }}"  async defer></script>
-        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}" async defer></script>
+        <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"  async defer></script>     
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="{{ url_for('static', filename='js/main.js') }}" async defer></script>
-        <script src="{{ url_for('static', filename='js/purecounter.js') }}" async defer></script>
-        <script src="{{ url_for('static', filename='js/swiper-bundle.min.js') }}" async defer></script>
         <script src="{{ url_for('static', filename='js/fontawesome.min.js') }}" async defer></script>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
-
+        <script src="https://www.google.com/recaptcha/api.js" async></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="modal" id="form_confirm" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-                </div>
-            </div>
-            </div>
         {% block content %}{% endblock content %}
 
+    <script>
 
-        <script>
-            $(document).ready(function(){
-              $('[data-toggle="tooltip"]').tooltip();
-            });
-        </script>
-        <script type="text/javascript">
-            var onloadCallback = function() {
-                
+
+        var onloadCallback = function() {
+            $("#submitForm").attr('disabled', false);
             };
-          </script>
-        {# if form_response #}
-            <script>
-                $(document).ready(function(){
-                    $("#form_confirm").modal('show');
-                });
-            </script>
-        {# endif #}
+
+        $("#submitForm").click(function(ev) {
+            var form = $("#sendmail");
+            $.ajax({
+                global: false,
+                type: "POST",
+                url: "/sendmail", // missing quotes  
+                dataType: "json",
+                data: {
+                    email: $("#email").val(),
+                    subject: $("#subject").val(),
+                    message: $("#message").val(),
+                    token: grecaptcha.getResponse(),
+                },
+                success: function(data) {
+                        
+                    // Ajax call completed successfully
+                    alert(data.message);
+                },
+                error: function(data) {
+                    alert("Failed");
+                },
+            });
+        });
+        
+    </script>
+    {% block scripts %}
+    {% endblock scripts%}
     </body>
 </html>
