--- a/templates/includes/about.html
+++ b/templates/includes/about.html
@@ -21,7 +21,7 @@
                                     <div class="about-info">
                                         <p><span class="title-s"><i class="fa-solid fa-user"></i> </span>  <span>Jan Peterhänsel</span></p>
                                         <p><span class="title-s"><i class="fa-solid fa-code"></i> </span>  <span>Python Developer</span></p>
-                                        <p><span class="title-s"><i class="fas fa-envelope"></i> </span>  <span>info@janpeterhaensel.de</span></p>
+                                        <p><span class="title-s"><i class="fas fa-envelope"></i> </span>  <span>web@janpeterhaensel.de</span></p>
                                         <p><span class="title-s"><i class="fas fa-home"></i></span>  <span>Würzburg, Bavaria</span></p>
                                     </div>
                                 </div>
